# docs/swagger.yaml
@@ -105,6 +105,24 @@ info:
   title: Microservices API
   version: "1.0"
 paths:
+  /EditData:
+    put:
+      consumes:
+      - application/json
+      description: Permite editar a data de fim de um formulário existente.
+      parameters:
+      - description: Dados para edição da data de fim do formulário
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entites.DateFormulario'
+      produces:
+      - application/json
+      responses: {}
+      summary: Editar a data de fim de um formulário
+      tags:
+      - formulario
   /administrators/createAdministrator:
     post:
       consumes:
